--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -265,7 +265,7 @@
   "Please, backup your secret phrase instead.": "Xin hãy sao lưu cụm từ khôi phục bí mật.",
   "Please, generate a new address in group {{ group }} first.": "Trước tiên, xin hãy tạo một địa chỉ ví trong nhóm {{ group }}.",
   "Previous year": "Năm ngoái",
-  "Private key copied!": "Khoá cá nhân đã sao chép!",
+  "Private key copied.": "Khoá cá nhân đã sao chép.",
   "Proxy address": "Proxy address",
   "Proxy port": "Proxy port",
   "Raw amount": "Raw amount",
@@ -445,7 +445,7 @@
   "Public key": "Public key",
   "Private key": "Private key",
   "Address keys export": "Address keys export",
-  "Public key copied!": "Public key copied!",
+  "Public key copied.": "Public key copied.",
   "Could not copy public key.": "Could not copy public key.",
   "Copy the keys of an address.": "Copy the keys of an address."
 }
