--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -25,7 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium tidak memiliki akses ke dompet Anda.\nAnda adalah satu-satunya pemilik.",
   "Alephium Logo": " Logo Alephium",
-  "Alephium's services": "Alephium's services",
+  "Alephium's services": "Layanan Alephium",
   "all": "semua",
   "All good? Let's continue!": "Semua baik? Ayo lanjutkan!",
   "All selected": "Semua telah dipilih",
@@ -53,12 +53,12 @@
   "Call contract": "Kontrak panggilan",
   "Cancel": "Batalkan",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Catat kata-kata dengan hati-hati! Itu adalah frasa pemulihan rahasia dompet Anda.",
-  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
-  "Change the wallet language.": "Change the wallet language.",
+  "Change the currency to use to display amounts.": "Ubah mata uang yang akan digunakan untuk menampilkan jumlahnya.",
+  "Change the wallet language.": "Ubah bahasa dompet.",
   "Change wallet name": "Ubah nama dompet",
   "Check": "Periksa",
   "Choose a contact": "Pilih kontak",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
+  "Click to deactivate discreet mode": "Klik untuk menonaktifkan mode rahasia",
   "Click to see less": "Klik untuk melihat lebih sedikit",
   "Click to see more": "Klik untuk melihat lebih banyak",
   "Close": "Tutup",
@@ -97,23 +97,23 @@
   "Could not save contact.": "Tidak dapat menyimpan kontak.",
   "Could not save new wallet name.": "Tidak dapat menyimpan nama dompet yang baru.",
   "Create contacts to avoid mistakes when sending transactions!": "Buat kontak untuk menghindari kesalahan saat mengirim transaksi!",
-  "Currency": "Currency",
+  "Currency": "Mata uang",
   "Current dApp connection details": "Detail koneksi dApp saat ini",
   "Current network": "Jaringan saat ini",
   "Current wallet": "Dompet saat ini",
   "Custom": "Khusus",
   "Custom network settings saved.": "Pengaturan khusus jaringan telah disimpan.",
-  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
+  "Custom proxy (SOCKS5)": "Proksi khusus (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Alamat bawaan",
-  "Default address for sending transactions.": "Alamat default untuk mengirim transaksi.",
+  "Default address for sending transactions.": "Alamat bawaan untuk mengirim transaksi.",
   "Delete": "Hapus",
   "Deploy contract": "Sebarkan kontrak",
   "Description": "Deskripsi",
   "Developer tools": "Alat pengembang",
   "Direction": "Arah",
   "Directions": "Arah",
-  "Disclaimer": "Disclaimer",
+  "Disclaimer": "Penafian",
   "Disconnect": "Putuskan",
   "Discover active addresses": "Temukanlah alamat yang aktif",
   "Discreet mode": "Mode rahasia",
@@ -125,7 +125,7 @@
   "Edit": "Sunting",
   "Edit contact": "Sunting kontak",
   "Enable developer tools": "Aktifkan alat pengembang",
-  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
+  "Encountered error while calling the faucet.": "Menemukan kesalahan saat memanggil faucet.",
   "Encountered error while exporting your transactions.": "Mengalami kesalahan saat mengekspor transaksi Anda.",
   "Encountered error while synching your addresses' data.": "Mengalami kesalahan saat menyinkronkan data alamat Anda.",
   "Enter": "Masuk",
@@ -168,7 +168,7 @@
   "Good evening.": "Selamat sore.",
   "Good morning.": "Selamat pagi.",
   "Good night.": "Selamat malam.",
-  "Great job! Remember to keep those words safe.": "Kerja bagus! Ingatlah untuk menjaga keamanan kata-kata itu.",
+  "Great job! Remember to keep those words safe.": "Kerja bagus! Ingatlah untuk menjaga keamanan kata-kata tersebut.",
   "Group": "Grup",
   "Help us improve your experience!": "Bantu kami untuk meningkatkan pengalaman Anda!",
   "Hide advanced options": "Sembunyikan opsi lanjutan",
@@ -230,13 +230,13 @@
   "New version": "Versi baru",
   "New wallet": "Dompet baru",
   "New wallet name": "Nama dompet baru",
-  "NFTs": "NFTs",
+  "NFTs": "NFT",
   "No contacts found. You can create contacts in the Addresses page.": "Tidak ditemukan kontak. Anda dapat membuat kontak di halaman Alamat.",
-  "No NFTs found.": "No NFTs found.",
+  "No NFTs found.": "Tidak ada NFT ditemukan.",
   "No options match the search criteria.": "Tidak ada opsi yang cocok dengan kriteria pencarian.",
   "No recovery phrase was stored along with this wallet": "Tidak ada frase pemulihan yang disimpan bersama dompet ini",
   "No transactions to display": "Tidak ada transaksi untuk ditampilkan",
-  "Node host": "Node host",
+  "Node host": "Host node",
   "Not your keys, not your coins.": "Bukan kunci Anda, bukan koin Anda.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Perhatikan bahwa jika diaktifkan, \"{{ address }}\" tidak akan menjadi alamat bawaan lagi.",
   "Number of transactions": "Jumlah dari transaksi",
@@ -346,14 +346,14 @@
   "Tab navigation": "Navigasi tab",
   "Tell us!": "Beri tahu kami!",
   "Testnet": "Testnet",
-  "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "Testnet tokens incoming.",
+  "Testnet faucet": "Faucet Testnet",
+  "Testnet tokens incoming.": "Token testnet masuk.",
   "The amount must be greater than {{ minAmount }}": "Jumlahnya harus lebih besar dari {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "Jaringan saat ini ({{ currentNetwork }}) tidak cocok dengan jaringan yang diminta oleh WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Cara termudah untuk memulai dengan Alephium.",
   "The group number will be automatically be appended to the addresses’ label.": "Nomor grup akan ditambahkan secara otomatis ke label alamat.",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Grup alamat yang telah dipilih ({{ addressGroup }}) tidak cocok dengan grup yang diperlukan oleh WalletConnect ({{ walletConnectGroup }})",
-  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.",
+  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "Dompet dikembangkan dalam bahasa Inggris.<br />Terjemahan dalam bahasa lain disediakan oleh komunitas Alephium.<br />Jika ragu, selalu merujuk ke dalam versi bahasa Inggris.",
   "The wallet is offline.": "Dompet sedang luring.",
   "Theme": "Tema",
   "There are no addresses in the required group: {{ group }}": "Tidak ada alamat di dalam grup yang wajib: {{ group }}",
@@ -402,7 +402,7 @@
   "Unlocked at": "Tidak terkunci pada",
   "Unlocks at": "Buka kunci di",
   "Unselect all": "Batalkan semua pilihan",
-  "Unverified": "Unverified",
+  "Unverified": "Tidak terverifikasi",
   "Update": "Perbarui",
   "Use an existing wallet": "Gunakan dompet yang sudah ada",
   "Use max amount": "Gunakan jumlah maksimum",
@@ -411,7 +411,7 @@
   "Value today": "Nilai hari ini",
   "Version": "Versi",
   "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Versi {{ newVersion }} telah tersedia. Klik \"Perbarui\" untuk menghindari masalah dompet.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Versi {{ newVersion }} telah tersedia. Silakan, unduh dan instal untuk menghindari masalah dompet.",
   "Wallet": "Dompet",
   "Wallet list": "Daftar dompet",
   "Wallet name": "Nama dompet",
@@ -427,25 +427,25 @@
   "welcomeScreenOneAddressPerGroupMessage": "Pengguna tingkat lanjut: ingin memulai dengan <1>satu alamat per grup untuk menambang atau DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Jika Anda ingin menggunakan <1>frasa sandi</1>, kunci dompet yang baru Anda buat.",
   "with": "dengan",
-  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "Anda saat ini terhubung ke jaringan {{ currentNetwork }}. Pastikan untuk terhubung ke jaringan testnet untuk melihat token Anda.",
   "You can disable this confirmation step from the wallet settings.": "Anda dapat menonaktifkan langkah konfirmasi ini dari pengaturan dompet.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Anda dapat mengunduh riwayat transaksi alamat untuk jangka waktu yang dipilih. Ini dapat berguna untuk pelaporan pajak.",
   "You have great ideas you want to share?": "Anda memiliki ide hebat yang ingin Anda bagikan?",
   "You have questions about transfers ? Click here!": "Anda memiliki pertanyaan tentang transfer? Klik disini!",
-  "You have reached the maximum calls limit. Please try again in a few minutes.": "You have reached the maximum calls limit. Please try again in a few minutes.",
+  "You have reached the maximum calls limit. Please try again in a few minutes.": "Anda telah mencapai batas panggilan maksimum. Silakan coba lagi dalam beberapa menit nanti.",
   "You will not be able to recover your account with the private key!": "Anda tidak akan dapat memulihkan akun Anda dengan kunci pribadi!",
   "Your address": "Alamat Anda",
   "Your addresses": "Alamat Milik Anda",
   "Your CSV file has been generated successfully.": "File CSV Anda telah berhasil dibuat.",
   "Your CSV file is being compiled in the background.": "File CSV Anda sedang dikompilasi di latar belakang.",
   "Your Wallet": "Dompet Anda",
-  "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.": "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.",
+  "Additionally, {{ amount }} ALPH needs to be sent. Click here for more info.": "Selain itu, {{ amount }} ALPH diperlukan untuk dikirim. Klik di sini untuk info lebih lanjut.",
   "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Experimental",
-  "Public key": "Public key",
-  "Private key": "Private key",
-  "Address keys export": "Address keys export",
-  "Public key copied.": "Public key copied.",
-  "Could not copy public key.": "Could not copy public key.",
-  "Copy the keys of an address.": "Copy the keys of an address."
+  "Experimental": "Eksperimental",
+  "Public key": "Kunci publik",
+  "Private key": "Kunci pribadi",
+  "Address keys export": "Ekspor kunci alamat",
+  "Public key copied.": "Kunci publik disalin.",
+  "Could not copy public key.": "Tidak dapat menyalin kunci publik.",
+  "Copy the keys of an address.": "Salin kunci alamat."
 }
