--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -31,7 +31,7 @@
   "All selected": "All selected",
   "All transactions loaded!": "All transactions loaded!",
   "ALPH amount": "ALPH-Betrag",
-  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "ALPH price: {{ price }}": "ALPH price: {{ price }}",
   "Alright! Time to check if you got your words right!": "Alles klar! Prüfen Sie, ob Sie die Wörter richtig aufgeschrieben haben!",
   "Amount": "Betrag",
   "Amount exceeds available balance": "Betrag übersteigt verfügbares Guthaben",
