--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -29,7 +29,7 @@
   "All selected": "All selected",
   "All transactions loaded!": "All transactions loaded!",
   "ALPH amount": "ALPH amount",
-  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "ALPH price: {{ price }}": "ALPH price: {{ price }}",
   "Alright! Time to check if you got your words right!": "Alright! Time to check if you got your words right!",
   "Amount": "Amount",
   "Amount exceeds available balance": "Amount exceeds available balance",
