--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -31,7 +31,7 @@
   "All selected": "All selected",
   "All transactions loaded!": "All transactions loaded!",
   "ALPH amount": "Montante em ALPH",
-  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "ALPH price: {{ price }}": "ALPH price: {{ price }}",
   "Alright! Time to check if you got your words right!": "Boa! Está na hora de verificar se as suas palavras estão correctas!",
   "Amount": "Montante",
   "Amount exceeds available balance": "O montante excede o saldo disponível",
