--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -31,7 +31,7 @@
   "All selected": "All selected",
   "All transactions loaded!": "All transactions loaded!",
   "ALPH amount": "ALPH miktarı",
-  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "ALPH price: {{ price }}": "ALPH price: {{ price }}",
   "Alright! Time to check if you got your words right!": "Pekala! Şimdi kurtarma sözcüklerini doğru şekilde aldığınızı kontrol etme zamanı!",
   "Amount": "Miktar",
   "Amount exceeds available balance": "Miktar mevcut bakiyeyi aşıyor",
