--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -1,11 +1,11 @@
 {
-  "(current)": "(current)",
-  "A contact with this address already exists": "A contact with this address already exists",
-  "A contact with this name already exists": "A contact with this name already exists",
-  "Activate dark mode": "Activate dark mode",
-  "Add asset": "Add asset",
-  "Address": "Address",
-  "Address copied to clipboard!": "Address copied to clipboard!",
+  "(current)": "(attuale)",
+  "A contact with this address already exists": "Esiste già un contatto con questo indirizzo",
+  "A contact with this name already exists": "Esiste già un contatto con questo nome",
+  "Activate dark mode": "Attiva la modalità scura",
+  "Add asset": "Aggiungi risorsa",
+  "Address": "Indirizzo",
+  "Address copied to clipboard!": "Indirizzo copiato negli appunti!",
   "Address details": "Address details",
   "Address group": "Address group",
   "Address label": "Address label",
