--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -6,13 +6,13 @@
   "Add asset": "Aggiungi risorsa",
   "Address": "Indirizzo",
   "Address copied to clipboard!": "Indirizzo copiato negli appunti!",
-  "Address details": "Address details",
-  "Address group": "Address group",
-  "Address label": "Address label",
-  "Address name": "Address name",
-  "Address NFTs": "Address NFTs",
-  "Address options": "Address options",
-  "Address tokens": "Address tokens",
+  "Address details": "Dettagli dell'indirizzo",
+  "Address group": "Gruppo di indirizzi",
+  "Address label": "Etichetta dell'indirizzo",
+  "Address name": "Nome dell'indirizzo",
+  "Address NFTs": "Indirizzo degli NFT",
+  "Address options": "Opzioni indirizzo",
+  "Address tokens": "Indirizzo dei token",
   "Address transactions": "Address transactions",
   "Addresses": "Addresses",
   "Addresses & contacts": "Addresses & contacts",
