--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -13,17 +13,17 @@
   "Address NFTs": "Indirizzo degli NFT",
   "Address options": "Opzioni indirizzo",
   "Address tokens": "Indirizzo dei token",
-  "Address transactions": "Address transactions",
-  "Addresses": "Addresses",
-  "Addresses & contacts": "Addresses & contacts",
-  "Advanced feature": "Advanced feature",
-  "Advanced operations": "Advanced operations",
-  "Advanced options": "Advanced options",
-  "Advanced settings": "Advanced settings",
+  "Address transactions": "Indirizzo transazioni",
+  "Addresses": "Indirizzi",
+  "Addresses & contacts": "Indirizzi e contatti",
+  "Advanced feature": "Funzionalità avanzate",
+  "Advanced operations": "Operazioni avanzate",
+  "Advanced options": "Opzioni avanzate",
+  "Advanced settings": "Impostazioni avanzate",
   "Alephium": "Alephium",
-  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium doesn't have access to your wallet.\nYou are the only owner.",
-  "Alephium Logo": "Alephium Logo",
-  "Alephium's services": "Alephium's services",
+  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium non ha accesso al tuo portafoglio.Tu sei l'unico proprietario.",
+  "Alephium Logo": "Logo Alephium",
+  "Alephium's services": "Servizi di Alephium",
   "all": "all",
   "All good? Let's continue!": "All good? Let's continue!",
   "All selected": "All selected",
