--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -24,21 +24,21 @@
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium non ha accesso al tuo portafoglio.Tu sei l'unico proprietario.",
   "Alephium Logo": "Logo Alephium",
   "Alephium's services": "Servizi di Alephium",
-  "all": "all",
-  "All good? Let's continue!": "All good? Let's continue!",
-  "All selected": "All selected",
-  "All transactions loaded!": "All transactions loaded!",
-  "ALPH amount": "ALPH amount",
-  "ALPH price: {{ price }}": "ALPH price: {{ price }}",
-  "Alright! Time to check if you got your words right!": "Alright! Time to check if you got your words right!",
-  "Amount": "Amount",
-  "Amount exceeds available balance": "Amount exceeds available balance",
-  "Amount must be greater than {{ minAmountInAlph }}": "Amount must be greater than {{ minAmountInAlph }}",
-  "Analytics": "Analytics",
-  "and": "and",
-  "Anyone with your private keys can steal any assets held in your addresses.": "Anyone with your private keys can steal any assets held in your addresses.",
-  "Approve": "Approve",
-  "Approve the proposal to connect": "Approve the proposal to connect",
+  "all": "tutto",
+  "All good? Let's continue!": "Tutto bene? Continuiamo!",
+  "All selected": "Tutto selezionato",
+  "All transactions loaded!": "Tutte le transazioni caricate!",
+  "ALPH amount": "Importo ALPH",
+  "ALPH price: {{ price }}": "Prezzo ALPH: {{ price }}",
+  "Alright! Time to check if you got your words right!": "Bene! È ora di controllare se hai capito bene le parole!",
+  "Amount": "Quantità",
+  "Amount exceeds available balance": "L'importo supera il saldo disponibile",
+  "Amount must be greater than {{ minAmountInAlph }}": "L'importo deve essere maggiore di {{ minAmountInAlph }}",
+  "Analytics": "Analisi",
+  "and": "e",
+  "Anyone with your private keys can steal any assets held in your addresses.": "Chiunque abbia le tue chiavi private può rubare qualsiasi risorsa conservata nei tuoi indirizzi.",
+  "Approve": "Approva",
+  "Approve the proposal to connect": "Approvare la proposta di connessione",
   "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?",
   "Asset": "Asset",
   "Assets": "Assets",
