--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -39,17 +39,17 @@
   "Anyone with your private keys can steal any assets held in your addresses.": "Chiunque abbia le tue chiavi private può rubare qualsiasi risorsa conservata nei tuoi indirizzi.",
   "Approve": "Approva",
   "Approve the proposal to connect": "Approvare la proposta di connessione",
-  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?",
-  "Asset": "Asset",
-  "Assets": "Assets",
-  "Available": "Available",
-  "Back": "Back",
-  "between": "between",
-  "Browse your transaction history. Execute new transfers easily.": "Browse your transaction history. Execute new transfers easily.",
-  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.",
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Sei sicuro di voler rimuovere \"{{ contactName }}\" dalla tua lista dei contatti?",
+  "Asset": "Risorsa",
+  "Assets": "Risorse",
+  "Available": "Disponibile",
+  "Back": "Indietro",
+  "between": "fra",
+  "Browse your transaction history. Execute new transfers easily.": "Sfoglia la cronologia delle tue transazioni. Esegui facilmente nuovi trasferimenti.",
+  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Per impostazione predefinita, l'indirizzo viene generato in un gruppo casuale. È possibile selezionare il gruppo in cui si desidera generare l'indirizzo utilizzando le opzioni Avanzate.",
   "Bytecode": "Bytecode",
-  "Call contract": "Call contract",
-  "Cancel": "Cancel",
+  "Call contract": "Chiamata del contratto",
+  "Cancel": "Annulla",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Carefully note down the words! They are your wallet's secret recovery phrase.",
   "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
   "Change the wallet language.": "Change the wallet language.",
