--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -447,5 +447,7 @@
   "Address keys export": "Address keys export",
   "Public key copied.": "Public key copied.",
   "Could not copy public key.": "Could not copy public key.",
-  "Copy the keys of an address.": "Copy the keys of an address."
+  "Copy the keys of an address.": "Copy the keys of an address.",
+  "Transaction hash": "Transaction hash",
+  "Copy hash": "Copy hash"
 }
