--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -21,7 +21,7 @@
   "Advanced options": "Opzioni avanzate",
   "Advanced settings": "Impostazioni avanzate",
   "Alephium": "Alephium",
-  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium non ha accesso al tuo portafoglio.Tu sei l'unico proprietario.",
+  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium non ha accesso al tuo portafoglio.\nTu sei l'unico proprietario.",
   "Alephium Logo": "Logo Alephium",
   "Alephium's services": "Servizi di Alephium",
   "all": "tutto",
@@ -50,79 +50,79 @@
   "Bytecode": "Bytecode",
   "Call contract": "Chiamata del contratto",
   "Cancel": "Annulla",
-  "Carefully note down the words! They are your wallet's secret recovery phrase.": "Carefully note down the words! They are your wallet's secret recovery phrase.",
-  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
-  "Change the wallet language.": "Change the wallet language.",
-  "Change wallet name": "Change wallet name",
-  "Check": "Check",
-  "Choose a contact": "Choose a contact",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
-  "Click to see less": "Click to see less",
-  "Click to see more": "Click to see more",
-  "Close": "Close",
-  "Coming soon!": "Coming soon!",
-  "Confirm": "Confirm",
-  "Confirm lock time": "Confirm lock time",
-  "Confirm passphrase": "Confirm passphrase",
-  "CONFIRM REMOVAL": "CONFIRM REMOVAL",
-  "Confirmed": "Confirmed",
-  "Connect": "Connect",
-  "Connect to a dApp": "Connect to a dApp",
-  "Connect to dApp": "Connect to dApp",
-  "Connect wallet to dApp": "Connect wallet to dApp",
-  "Consolidate": "Consolidate",
-  "Consolidate (merge) your UTXOs into one.": "Consolidate (merge) your UTXOs into one.",
-  "Consolidate UTXOs": "Consolidate UTXOs",
-  "Contact deleted": "Contact deleted",
-  "Contact saved": "Contact saved",
-  "Contacts": "Contacts",
-  "Continue": "Continue",
-  "Copied": "Copied",
-  "Copied to clipboard!": "Copied to clipboard!",
-  "Copy address": "Copy address",
-  "Copy contact address": "Copy contact address",
-  "Copy private key": "Copy private key",
-  "Copy to clipboard": "Copy to clipboard",
-  "Copy to clipboard failed": "Copy to clipboard failed",
-  "Copy token hash": "Copy token hash",
-  "Could not connect to the {{ currentNetwork }} network.": "Could not connect to the {{ currentNetwork }} network.",
-  "Could not copy private key.": "Could not copy private key.",
-  "Could not delete contact.": "Could not delete contact.",
-  "Could not fetch data because the wallet is offline": "Could not fetch data because the wallet is offline",
-  "Could not find a contact with this ID": "Could not find a contact with this ID",
-  "Could not find a contact with this name": "Could not find a contact with this name",
-  "Could not pair with WalletConnect": "Could not pair with WalletConnect",
-  "Could not save contact.": "Could not save contact.",
-  "Could not save new wallet name.": "Could not save new wallet name.",
-  "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
-  "Currency": "Currency",
-  "Current dApp connection details": "Current dApp connection details",
-  "Current network": "Current network",
-  "Current wallet": "Current wallet",
-  "Custom": "Custom",
-  "Custom network settings saved.": "Custom network settings saved.",
-  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
-  "Dark": "Dark",
-  "Default address": "Default address",
-  "Default address for sending transactions.": "Default address for sending transactions.",
-  "Delete": "Delete",
-  "Deploy contract": "Deploy contract",
-  "Description": "Description",
-  "Developer tools": "Developer tools",
-  "Direction": "Direction",
-  "Directions": "Directions",
-  "Disconnect": "Disconnect",
-  "Discover active addresses": "Discover active addresses",
-  "Discreet mode": "Discreet mode",
-  "Download": "Download",
-  "Download failed, try again later.": "Download failed, try again later.",
-  "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
-  "Duration in minutes after which an idle wallet will lock automatically.": "Duration in minutes after which an idle wallet will lock automatically.",
-  "Easily organize your addresses and your contacts for a more serene transfer experience.": "Easily organize your addresses and your contacts for a more serene transfer experience.",
-  "Edit": "Edit",
-  "Edit contact": "Edit contact",
-  "Enable developer tools": "Enable developer tools",
-  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
+  "Carefully note down the words! They are your wallet's secret recovery phrase.": "Annota attentamente le parole! Sono la frase di recupero segreta del tuo portafoglio.",
+  "Change the currency to use to display amounts.": "Modificare la valuta da utilizzare per visualizzare gli importi.",
+  "Change the wallet language.": "Cambia la lingua del portafoglio.",
+  "Change wallet name": "Cambia il nome del portafoglio",
+  "Check": "Verifica",
+  "Choose a contact": "Scegli un contatto",
+  "Click to deactivate discreet mode": "Fare clic per disattivare la modalità discreta",
+  "Click to see less": "Clicca per vedere di meno",
+  "Click to see more": "Clicca per vedere di più",
+  "Close": "Chiudi",
+  "Coming soon!": "Presto disponibile!",
+  "Confirm": "Confermare",
+  "Confirm lock time": "Conferma il tempo di blocco",
+  "Confirm passphrase": "Conferma la frase segreta",
+  "CONFIRM REMOVAL": "CONFERMA RIMOZIONE",
+  "Confirmed": "Confermato",
+  "Connect": "Collegare",
+  "Connect to a dApp": "Connettiti a una dApp",
+  "Connect to dApp": "Connettiti alla dApp",
+  "Connect wallet to dApp": "Collega il portafoglio alla dApp",
+  "Consolidate": "Consolidare",
+  "Consolidate (merge) your UTXOs into one.": "Consolida (unisci) i tuoi UTXO in uno solo.",
+  "Consolidate UTXOs": "Consolidare gli UTXO",
+  "Contact deleted": "Contatto eliminato",
+  "Contact saved": "Contatto salvato",
+  "Contacts": "Contatti",
+  "Continue": "Continua",
+  "Copied": "Copiato",
+  "Copied to clipboard!": "Copiato negli appunti!",
+  "Copy address": "Copia indirizzo",
+  "Copy contact address": "Copia l'indirizzo di contatto",
+  "Copy private key": "Copia la chiave privata",
+  "Copy to clipboard": "Copia negli appunti",
+  "Copy to clipboard failed": "Copia negli appunti non riuscita",
+  "Copy token hash": "Copia l'hash del token",
+  "Could not connect to the {{ currentNetwork }} network.": "Impossibile connettersi al {{ currentNetwork }} rete.",
+  "Could not copy private key.": "Impossibile copiare la chiave privata.",
+  "Could not delete contact.": "Impossibile eliminare il contatto.",
+  "Could not fetch data because the wallet is offline": "Impossibile recuperare i dati perché il portafoglio è offline",
+  "Could not find a contact with this ID": "Impossibile trovare un contatto con questo ID",
+  "Could not find a contact with this name": "Impossibile trovare un contatto con questo nome",
+  "Could not pair with WalletConnect": "Impossibile eseguire l'accoppiamento con WalletConnect",
+  "Could not save contact.": "Impossibile salvare il contatto.",
+  "Could not save new wallet name.": "Impossibile salvare il nuovo nome del portafoglio.",
+  "Create contacts to avoid mistakes when sending transactions!": "Crea contatti per evitare errori durante l'invio di transazioni!",
+  "Currency": "Valuta",
+  "Current dApp connection details": "Dettagli della connessione dApp corrente",
+  "Current network": "Rete attuale",
+  "Current wallet": "Portafoglio attuale",
+  "Custom": "Personalizzato",
+  "Custom network settings saved.": "Impostazioni di rete personalizzate salvate.",
+  "Custom proxy (SOCKS5)": "Proxy personalizzato (SOCKS5)",
+  "Dark": "Scuro",
+  "Default address": "Indirizzo predefinito",
+  "Default address for sending transactions.": "Indirizzo predefinito per l'invio delle transazioni.",
+  "Delete": "Eliminare",
+  "Deploy contract": "Contratto di distribuzione",
+  "Description": "Descrizione",
+  "Developer tools": "Strumenti di sviluppo",
+  "Direction": "Direzione",
+  "Directions": "Indicazioni",
+  "Disconnect": "Disconnetti",
+  "Discover active addresses": "Scopri gli indirizzi attivi",
+  "Discreet mode": "Modalità discreta",
+  "Download": "Scarica",
+  "Download failed, try again later.": "Scaricamento non riuscito, riprova più tardi.",
+  "Downloaded {{ percent }}%": "Scaricato {{ percent }}%",
+  "Duration in minutes after which an idle wallet will lock automatically.": "Durata in minuti dopo la quale un portafoglio inattivo si bloccherà automaticamente.",
+  "Easily organize your addresses and your contacts for a more serene transfer experience.": "Organizza facilmente i tuoi indirizzi e i tuoi contatti per un'esperienza di trasferimento più serena.",
+  "Edit": "Modifica",
+  "Edit contact": "Modifica il contatto",
+  "Enable developer tools": "Abilita gli strumenti per sviluppatori",
+  "Encountered error while calling the faucet.": "Si è verificato un errore durante la chiamata al rubinetto.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Enter",
