--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -123,8 +123,8 @@
   "Edit contact": "Modifica il contatto",
   "Enable developer tools": "Abilita gli strumenti per sviluppatori",
   "Encountered error while calling the faucet.": "Si è verificato un errore durante la chiamata al rubinetto.",
-  "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
-  "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
+  "Encountered error while exporting your transactions.": "Si è verificato un errore durante l'esportazione delle tue transazioni.",
+  "Encountered error while synching your addresses' data.": "Si è verificato un errore durante la sincronizzazione dei dati dei tuoi indirizzi.",
   "Enter": "Enter",
   "Enter password": "Enter password",
   "Enter password for \"{{ switchToWalletName }}\"": "Enter password for \"{{ switchToWalletName }}\"",
