--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -125,62 +125,62 @@
   "Encountered error while calling the faucet.": "Si è verificato un errore durante la chiamata al rubinetto.",
   "Encountered error while exporting your transactions.": "Si è verificato un errore durante l'esportazione delle tue transazioni.",
   "Encountered error while synching your addresses' data.": "Si è verificato un errore durante la sincronizzazione dei dati dei tuoi indirizzi.",
-  "Enter": "Enter",
-  "Enter password": "Enter password",
-  "Enter password for \"{{ switchToWalletName }}\"": "Enter password for \"{{ switchToWalletName }}\"",
-  "Enter your password to copy the private key.": "Enter your password to copy the private key.",
-  "Enter your password to send the transaction.": "Enter your password to send the transaction.",
-  "Error while building the transaction": "Error while building the transaction",
-  "Error while building transaction": "Error while building transaction",
-  "Error while fetching data for address {{ hash }}": "Error while fetching data for address {{ hash }}",
-  "Error while fetching pending transactions for address {{ hash }}": "Error while fetching pending transactions for address {{ hash }}",
-  "Error while importing wallet": "Error while importing wallet",
-  "Error while sending the transaction": "Error while sending the transaction",
-  "Error while sweeping address {{ from }}": "Error while sweeping address {{ from }}",
-  "Everything is ready!": "Everything is ready!",
-  "Expand": "Expand",
-  "Expected fee": "Expected fee",
-  "Explorer API host": "Explorer API host",
-  "Explorer URL": "Explorer URL",
-  "Export": "Export",
-  "Export address transactions": "Export address transactions",
-  "Export current wallet": "Export current wallet",
-  "Export wallet": "Export wallet",
-  "Features for developers only": "Features for developers only",
-  "Fee": "Fee",
-  "For mining or DeFi use.": "For mining or DeFi use.",
-  "from": "from",
-  "From": "From",
-  "From address": "From address",
+  "Enter": "Inserisci",
+  "Enter password": "Inserire la password",
+  "Enter password for \"{{ switchToWalletName }}\"": "Inserisci la password per \"{{ switchToWalletName }}\"",
+  "Enter your password to copy the private key.": "Inserisci la tua password per copiare la chiave privata.",
+  "Enter your password to send the transaction.": "Inserisci la tua password per inviare la transazione.",
+  "Error while building the transaction": "Errore durante la creazione della transazione",
+  "Error while building transaction": "Errore durante la creazione della transazione",
+  "Error while fetching data for address {{ hash }}": "Errore durante il recupero dei dati per l'indirizzo {{ hash }}",
+  "Error while fetching pending transactions for address {{ hash }}": "Errore durante il recupero delle transazioni in sospeso per l'indirizzo {{ hash }}",
+  "Error while importing wallet": "Errore durante l'importazione del portafoglio",
+  "Error while sending the transaction": "Errore durante l'invio della transazione",
+  "Error while sweeping address {{ from }}": "Errore durante lo sweeping dell'indirizzo {{ from }}",
+  "Everything is ready!": "È tutto pronto!",
+  "Expand": "Espandere",
+  "Expected fee": "Tariffa prevista",
+  "Explorer API host": "Host dell'API Explorer",
+  "Explorer URL": "URL dell'esploratore",
+  "Export": "Esportare",
+  "Export address transactions": "Esporta le transazioni degli indirizzi",
+  "Export current wallet": "Esporta il portafoglio corrente",
+  "Export wallet": "Esporta portafoglio",
+  "Features for developers only": "Funzioni solo per sviluppatori",
+  "Fee": "Tassa",
+  "For mining or DeFi use.": "Per uso minerario o DeFi.",
+  "from": "da",
+  "From": "Da",
+  "From address": "Da indirizzo",
   "Gas": "Gas",
-  "Gas amount": "Gas amount",
-  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
-  "Gas price": "Gas price",
-  "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
-  "General": "General",
-  "Generate": "Generate",
-  "Generate one address per group": "Generate one address per group",
-  "Genesis TX": "Genesis TX",
-  "Good afternoon.": "Good afternoon.",
-  "Good evening.": "Good evening.",
-  "Good morning.": "Good morning.",
-  "Good night.": "Good night.",
-  "Great job! Remember to keep those words safe.": "Great job! Remember to keep those words safe.",
-  "Group": "Group",
-  "Help us improve your experience!": "Help us improve your experience!",
-  "Hide advanced options": "Hide advanced options",
-  "Hide empty": "Hide empty",
-  "I have read and understood the documentation": "I have read and understood the documentation",
-  "I've copied the words, continue": "I've copied the words, continue",
-  "Import or create a wallet": "Import or create a wallet",
-  "Import wallet": "Import wallet",
-  "in": "in",
-  "Info": "Info",
-  "Inputs": "Inputs",
-  "Insecure password": "Insecure password",
-  "into": "into",
-  "Invalid password": "Invalid password",
-  "Issue token amount": "Issue token amount",
+  "Gas amount": "Quantità di Gas",
+  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "La quantità di Gas deve essere maggiore di {{ MINIMAL_GAS_AMOUNT }}.",
+  "Gas price": "Prezzo Gas",
+  "Gas price must be greater than {{ amount }}": "Il prezzo del Gas deve essere maggiore di {{ amount }}",
+  "General": "Generale",
+  "Generate": "Genera",
+  "Generate one address per group": "Genera un indirizzo per gruppo",
+  "Genesis TX": "Genesi TX",
+  "Good afternoon.": "Buon pomeriggio.",
+  "Good evening.": "Buonasera.",
+  "Good morning.": "Buongiorno.",
+  "Good night.": "Buonanotte.",
+  "Great job! Remember to keep those words safe.": "Ottimo lavoro! Ricordati di tenere quelle parole al sicuro.",
+  "Group": "Gruppo",
+  "Help us improve your experience!": "Aiutaci a migliorare la tua esperienza!",
+  "Hide advanced options": "Nascondi le opzioni avanzate",
+  "Hide empty": "Nascondi vuoto",
+  "I have read and understood the documentation": "Ho letto e compreso la documentazione",
+  "I've copied the words, continue": "Ho copiato le parole, continua",
+  "Import or create a wallet": "Importa o crea un portafoglio",
+  "Import wallet": "Importa portafoglio",
+  "in": "nel",
+  "Info": "Informazioni",
+  "Inputs": "Ingressi",
+  "Insecure password": "Password non sicura",
+  "into": "in",
+  "Invalid password": "Password non valida",
+  "Issue token amount": "Importo del token di emissione",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.",
   "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.",
   "Label": "Label",
